--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "axios": "^0.18.0",
     "iview": "^3.4.1",
+    "js-cookie": "^2.2.0",
     "qs": "latest",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
-    "vue-wechat-title": "^2.0.5"
+    "vue-wechat-title": "^2.0.5",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
